After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686175 - "last-played-time" declared as string, instead of date-time
"last-played-time" declared as string, instead of date-time
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: core
0.2.x
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2012-10-15 17:47 UTC by Mathias Hasselmann (IRC: tbf)
Modified: 2015-08-25 16:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
core: Change "last-played-time" type to GDateTime (3.62 KB, patch)
2014-11-27 14:11 UTC, Bastien Nocera
none Details | Review
metadata-store: Update for last-played type change (2.38 KB, patch)
2014-11-27 14:13 UTC, Bastien Nocera
committed Details | Review
tracker: Update for last-played type change (1.18 KB, patch)
2014-11-27 14:14 UTC, Bastien Nocera
committed Details | Review
core: Change "last-played-time" type to GDateTime (3.73 KB, patch)
2015-08-25 16:23 UTC, Bastien Nocera
committed Details | Review

Description Mathias Hasselmann (IRC: tbf) 2012-10-15 17:47:32 UTC
The "last-played-time" metadata key describes the "last time the media was played".
Therefore it should by of type GDateTime, instead of a string.
How can we fix without breaking apps?
Comment 1 Juan A. Suarez Romero 2012-10-17 09:03:07 UTC
As I don't want to break the API at this moment, this is my proposal:

- Keep the key as it is: we deal it as a string.
- Write a patch for moving from string to GDateTime and commit it in a branch (like 0.3.x).
- As soon as we release a new version that breaks our current API (new 0.3.0 release), we merge all the commits in 0.3.x branch.


This way we track a list of patches that will be applied in new API version without breaking our current API.
Comment 2 Bastien Nocera 2014-02-21 14:58:32 UTC
Or add a new "last-played-date" property, make the old one be a proxy to the real one, and add deprecation notice to "last-played-time".
Comment 3 Bastien Nocera 2014-11-27 14:11:20 UTC
Created attachment 291650 [details] [review]
core: Change "last-played-time" type to GDateTime

Instead of a string.
Comment 4 Bastien Nocera 2014-11-27 14:13:56 UTC
Created attachment 291652 [details] [review]
metadata-store: Update for last-played type change
Comment 5 Bastien Nocera 2014-11-27 14:14:01 UTC
Created attachment 291653 [details] [review]
tracker: Update for last-played type change
Comment 6 Bastien Nocera 2015-08-25 16:23:02 UTC
Created attachment 309976 [details] [review]
core: Change "last-played-time" type to GDateTime

Instead of a string.
Comment 7 Bastien Nocera 2015-08-25 16:31:15 UTC
Attachment 291652 [details] pushed as 3ae4ffd - metadata-store: Update for last-played type change
Attachment 291653 [details] pushed as 59d8033 - tracker: Update for last-played type change
Comment 8 Bastien Nocera 2015-08-25 16:33:20 UTC
Attachment 309976 [details] pushed as 444b2d9 - core: Change "last-played-time" type to GDateTime