core: Change "last-played-time" type to GDateTime

Instead of a string.

https://bugzilla.gnome.org/show_bug.cgi?id=686175